--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,6 @@
 @import './base/settings';
 @import './base/base';
+@import './base/mixins';
 @import './components/animations';
+@import './components/middle-line';
 @import './components/tails';
