--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,11 +1,12 @@
 // Colors
-$grey: #666;
-$a:#8CDCDA;
-$b: #4D4D4D;
-$c:#B1D877;
-$d:#F16A70;
-$dark-blue: #364051;
-$off-white: #f7f7f7;
+$sunshine: #F9BA32;
+$steel-blue: #426E86;
+$bone: #F8F1E5;
+$coal: #2F3131;
+// $sunshine:#31A2AC;
+// $steel-blue:#AF1C1C;
+// $bone:#F0EFF0;
+// $coal:#2F2F28;
 // Font Size
 $font-size-large: 1.8rem;
 $font-size-small: 1.4rem;
