--- a/src/styles/components/_tails.scss
+++ b/src/styles/components/_tails.scss
@@ -1,118 +1,101 @@
 .tail {
-    width:25vw
+    width: 25vw;
 }
 
-.tail--green {
-    background:$a;
+.tail--coal {
+    background: $coal;
 }
 
-.tail--red {
-    background:$b;
+.tail--bone {
+    background: $bone;
 }
 
-.tail--blue {
-    background:$c;
+.tail--sunshine {
+    background: $sunshine;
 }
 
-.tail--black {
-    background:$d;
-}
-
-.tails-container {
-    width: 50vw;
-    height: 100vh;
-    position:absolute;
-    display:flex;
-    flex-wrap:wrap;
-    overflow:hidden;
-}
-
-.tails-container--left {
-    left:0;
-}
-
-.tails-container--right {
-    left:50vw;
-}
-
-.tails-wrapper {
-    width: 50vw;
-    height: 100vh;
-    background: white;
-    position:absolute;
-}
-
-.tails-wrapper--left {
-    left:0;
-    animation: 1s ease-out 0s 1 slideTailsWrapperToTheLeft;
-    animation-fill-mode:forwards;
-}
-
-.tails-wrapper--right {
-    left:50vw;
-    animation: 1s ease-out 0s 1 slideTailsWrapperToTheRight;
-    animation-fill-mode:forwards;
-}
-
-
-.tails-layer {
-    display:flex;
-    flex-wrap:wrap;
-    overflow:hidden;
-    position:absolute;
-    width:50vw;
-    height:calc(100vh - (100vh / 3));
-}
-
-.tails-layer--bottom {
-    left:0;
-    top:-66.6666vh;
-    animation: 1s ease-out 1s 1 slideToTheBottom;
-    animation-fill-mode:forwards;
-}
-
-.tails-layer--top {
-    left:50vw;
-    top:100vh;
-    animation: 1s ease-out 1s 1 slideToTheTop;
-    animation-fill-mode:forwards;
+.tail--steel-blue {
+    background: $steel-blue;
 }
 
 .tail--sticky {
-    z-index:2;
+    z-index: 2;
 }
 
 .tail--router {
-    height:calc(100vh / 3);
-    z-index:4;
-    position:absolute;
-
+    height: calc(100vh / 3);
+    position: absolute;
+    z-index: 5;
 }
 
-.tail--red.tail--router {
-    left:-25vw;
-    top:0;
-    animation: 1s ease-out 2s 1 redLast;
-    animation-fill-mode:forwards;
+.tails-container {
+    @include half-vw;
+    height: 100vh;
 }
 
-.tail--blue.tail--router {
-    left:50vw;
-    top:-33.3333vh;
-    animation: 1s ease-out 2s 1 blueLast;
-    animation-fill-mode:forwards;
+.tails-container--left {
+    left: 0;
 }
 
-.tail--black.tail--router {
-    left:25vw;
-    top:100vh;
-    animation: 1s ease-out 2s 1 blackLast;
-    animation-fill-mode:forwards;
+.tails-container--right {
+    left: 50vw;
 }
 
-.tail--green.tail--router {
-    left:100vw;
-    top:calc(100vh - (100vh / 3));
-    animation: 1s ease-out 2s 1 greenLast;
-    animation-fill-mode:forwards;
+.tails-wrapper {
+    background: white;
+    height: 100vh;
+    position: absolute;
+    width: 50vw;
+    z-index: 3;
+}
+
+.tails-wrapper--left {
+    animation: 1s ease-out 1s 1 slideTailsWrapperToTheLeft forwards;
+    left: 0;
+}
+
+.tails-wrapper--right {
+    animation: 1s ease-out 1s 1 slideTailsWrapperToTheRight forwards;
+    left: 50vw;
+}
+
+.tails-layer {
+    @include half-vw;
+    height: calc(100vh - (100vh / 3));
+}
+
+.tails-layer--top-left {
+    animation: 1s ease-out 2s 1 slideTailsLayerToTheBottom forwards;
+    left: 0;
+    top: -66.6666vh;
+}
+
+.tails-layer--bottom-right {
+    animation: 1s ease-out 2s 1 slideTailsLayerToTheTop forwards;
+    left: 50vw;
+    top: 100vh;
+}
+
+.tail--steel-blue.tail--router {
+    animation: 1s ease-out 3s 1 slideTailSteelBlueRouter forwards;
+    left: -25vw;
+    top: 0;
+}
+
+.tail--bone.tail--router {
+    animation: 1s ease-out 3s 1 slideTailBoneRouter forwards;
+    left: 50vw;
+    top: -33.3333vh;
+}
+
+.tail--coal.tail--router {
+    animation: 1s ease-out 3s 1 slideTailCoalRouter forwards;
+    left: 25vw;
+    top: 100vh;
+}
+
+.tail--sunshine.tail--router {
+    animation: 1s ease-out 3s 1 slideTailSunshineRouter forwards;
+    left: 100vw;
+    top: calc(100vh - (100vh / 3));
 }
