--- a/src/styles/components/_tails.scss
+++ b/src/styles/components/_tails.scss
@@ -33,6 +33,12 @@
     height: 100vh;
 }
 
+.tails-container--full {
+    @include half-vw;
+    height: 100vh;
+    width: 100vw;
+}
+
 .tails-container--left {
     left: 0;
 }
