--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,4 +3,5 @@
 @import './base/mixins';
 @import './components/animations';
 @import './components/middle-line';
+@import './components/svg';
 @import './components/tails';
