--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -9,13 +9,26 @@ html {
 }
 
 body {
-  background: white;
   font-size: $m-size;
+  background: white;
 }
 
-.page-container{
-  height: 100vh;
+a {
+  color: inherit;
+  text-decoration: none;
+    &:focus, &:hover, &:visited, &:link, &:active {
+    text-decoration: none;
+  }
+}
+
+svg {
+  height: 90%;
+  width: 100%;
+}
+
+.page-container {
   display: flex;
+  height: 100vh;
   overflow: hidden;
   position: relative;
   width: 100vw;
