--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -2,7 +2,14 @@
   display: flex;
   flex-wrap: wrap;
   height: 100vh;
-  width: 50vw;
   overflow: hidden;
   position: absolute;
+  width: 50vw;
+}
+
+@mixin center {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
