adding contact page

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -9,6 +9,7 @@ $coal: #2F3131;
 // $coal:#2F2F28;
 // Font Size
 $font-size-large: 3.2rem;
+$font-size-normal: 2.4rem;
 $font-size-small: 1.4rem;
 // Spacing
 $s-size: 1.2rem;
