--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,9 @@
+@import './base/mixins';
 @import './base/settings';
 @import './base/base';
-@import './base/mixins';
 @import './components/animations';
 @import './components/middle-line';
 @import './components/svg';
 @import './components/tails';
+@import './components/contact';
+@import './components/page';
