--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,5 +5,6 @@
 @import './components/middle-line';
 @import './components/svg';
 @import './components/tails';
-@import './components/contact';
 @import './components/page';
+@import './components/contact';
+@import './components/about';
