refactoring bone/coal to white/black

--- a/src/styles/components/_animations.scss
+++ b/src/styles/components/_animations.scss
@@ -49,7 +49,7 @@
     }
 }
 
-@keyframes slideTailBoneRouter {
+@keyframes slideTailWhiteRouter {
     0% {
       transform: translateY(0);
     }
@@ -58,7 +58,7 @@
     }
 }
 
-@keyframes slideTailCoalRouter {
+@keyframes slideTailBlackRouter {
     0% {
       transform: translateY(0);
     }
