--- a/src/styles/components/_page.scss
+++ b/src/styles/components/_page.scss
@@ -12,7 +12,7 @@
   color: $steel-blue;
 }
 
-.page-container--bone {
+.page-container--white {
   @include center;
   background: $white;
   color: $black;
@@ -32,6 +32,6 @@
   fill: $steel-blue;
 }
 
-.page-link--coal {
+.page-link--black {
   fill: $black;
 }
