adding skills page

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -25,6 +25,10 @@
   line-height: 1.3;
 }
 
+.skills__paragraph--front {
+  width: 100%;
+}
+
 .about__paragraph--underline, a:link.about__paragraph--underline {
   text-decoration: underline;
   font-weight: bold;
