--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,5 +1,4 @@
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -11,6 +10,8 @@ html {
 body {
   font-size: $m-size;
   background: white;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 a {
