--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,3 +9,5 @@
 @import './components/contact';
 @import './components/about';
 @import './components/skills';
+@import './components/projects';
+@import './components/transitions';
