--- a/src/styles/components/_transitions.scss
+++ b/src/styles/components/_transitions.scss
@@ -1,9 +1,11 @@
+/* page component load */
+
 .fade-appear {
-    opacity: 0;
-    z-index: 1;
+  opacity: 0;
+  z-index: 1;
 }
 
 .fade-appear.fade-appear-active {
   opacity: 1;
-  transition: opacity 300ms ease-in-out;
+  transition: opacity 0.3s ease-in-out;
 }
