addding favicon, rwd main page

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  font-size: $m-size;
+  font-size: $font-size-small;
   background: white;
   max-width: 100vw;
   overflow-x: hidden;
