--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -5,15 +5,8 @@ $white: white;
 $black: black;
 $coal: #F8F1E5;
 // Font Size
+$font-size-largest: 6.4rem;
+$font-size-larger: 4.2rem;
 $font-size-large: 3.2rem;
 $font-size-normal: 2.4rem;
-$font-size-small: 1.4rem;
-// Spacing
-$s-size: 1.2rem;
-$m-size: 1.6rem;
-$l-size: 3.2rem;
-$xl-size: 4.8rem;
-$desktop-breakpoint: 768px;
-// $desktop-breakpoint: 768px;
-// $mobile-breakpoint: 41.1;
-$mobile-breakpoint: 420px;
+$font-size-small: 1.6rem;
