--- a/src/styles/components/_tails.scss
+++ b/src/styles/components/_tails.scss
@@ -123,7 +123,7 @@
 }
 
 .tail__title {
-  font-size: 64px;
+  font-size: $font-size-largest;
   font-family: 'Redressed', cursive;
   font-weight: bold;
   text-align: center;
@@ -153,7 +153,7 @@
 .sticky__paragraph {
   animation: 0.3s ease-out 4s 1 hideElementByOpacity forwards;
   font-family: 'Righteous', cursive;
-  font-size: 38px;
+  font-size: $font-size-larger;
   font-weight: bold;
   font-weight: bold;
 }
@@ -248,4 +248,32 @@
   animation: 1s ease-out 3s 1 slideTailSunshineRouter forwards;
   left: 100vw;
   top: calc(100vh - (100vh / 3));
+}
+
+
+@media (max-width: 986px) {
+
+  .tail__title {
+    font-size: $font-size-larger;
+  }
+
+  .sticky__paragraph {
+    font-size: $font-size-normal;
+  }
+}
+
+@media (max-width: 660px) {
+
+  .tail__title {
+    font-size: $font-size-large;
+  }
+
+}
+
+@media (max-width: 540px) {
+
+  .tail__title {
+    font-size: $font-size-normal;
+  }
+
 }
